--- a/TributePageSandy.html
+++ b/TributePageSandy.html
@@ -1,3 +1,8 @@
+<!-- 
+Render this html by using html preview, See https://github.com/htmlpreview/htmlpreview.github.com
+Prepend https://htmlpreview.github.io/? to the url
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
